line15 to index file is added

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+  
 
 <body>
   Hello world
   Hey! how you doing?
+  This is another test comment1.
   <script src="script.js"></script>
 </body>
 
